fixed layout and shift bug

--- a/src/app/layouts/auth-layout/auth-layout.module.scss
+++ b/src/app/layouts/auth-layout/auth-layout.module.scss
@@ -15,7 +15,6 @@
   .main {
     height: calc(100vh - 56px);
     display: flex;
-    flex: 1;
   }
 
   .contentWrapper {
