--- a/src/widgets/chat/styles/chat-session.module.scss
+++ b/src/widgets/chat/styles/chat-session.module.scss
@@ -4,6 +4,19 @@
   width: 100%;
   padding: 50px;
   overflow-y: auto;
+  animation: slideUpCenter 0.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+
+  @keyframes slideUpCenter {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 
   .loading {
     height: 40px;
