--- a/src/widgets/pdf-viewer/pdf-viewer.module.scss
+++ b/src/widgets/pdf-viewer/pdf-viewer.module.scss
@@ -9,7 +9,9 @@
   max-width: 100vw;
   flex-shrink: 0;
   animation: slideIn 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
+  position: fixed;
+  right: 0;
+  top: 0;
   overflow: hidden;
 
   @keyframes slideIn {
@@ -132,7 +134,7 @@
 }
 
 .alert {
-  top: 50%;
+  top: 40%;
   left: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
